# mcu_sdcard

./: .gitignore  CMakeLists.txt  README.md
cmake/: chip_libraries.cmake
mcu_sdcard/: file_utils.h  fsmci_cfg.h  sdcard.h  sdcard_info.h
mcu_sdcard/src/: file_utils.c  fs_mci.c  fsmci_cfg.h  sdcard.c  sdcard_info.c  sdcard_reinit.h
